# CRM-AI-AGENT

./: README.md  pyproject.toml  streamlit_app.py
app/: server.py
app/AuthFlowHubspot/: authroutes.py  token_manager.py
app/GROQ_CLIENT/: groq_api.py
app/controllers/Deals/: deals_endpoint.py
app/controllers/agent/: agent_endpoint.py  email_endpoint.py
app/controllers/contacts/: contact_endpoints.py
app/domain/: __init__.py
app/domain/AiAgent/ContactAgent/usecase/: contact_agent.py
app/domain/AiAgent/EmailAgent/data/: EmailDataModel.py  EmailTemplates.py
app/domain/AiAgent/EmailAgent/usecase/: email_agent.py
app/domain/AiAgent/OrchestratorAgent/data/: DataModel.py
app/domain/AiAgent/OrchestratorAgent/prompts/: Query_Decomposer_Prompt.py  contact_search_prompt.py  orchestrator_prompt.py  payload_createrPrompt.py
app/domain/AiAgent/OrchestratorAgent/usecase/: OrchestrationAgent.py  query_decomposer.py
app/domain/CRM/Deals/data/: DealProperties.py
app/domain/CRM/Deals/usecase/: deals_operations.py
app/domain/CRM/contacts/data/: ContactDataModel.py
app/domain/CRM/contacts/usecase/: contacts_Operations.py
app/infra/: config.py  constant.py
app/shared/io_files/: token.json
app/shared/logs/app_errors/: error_logs.txt
app/shared/logs/app_logs/: app_logs.txt
app/shared/utils/: common_functions.py  error.py
